--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,12 @@ llama-index = { extras = ["local_models"], version = "0.9.3" }
 watchdog = "^3.0.0"
 qdrant-client = "^1.6.9"
 chromadb = {version = "^0.4.13", optional = true}
+docx2txt = "^0.8"
+whisper = "^1.1.10"
+torch = "^2.1.1"
+transformers = "^4.35.2"
+python-pptx = "^0.6.23"
+pillow = "^10.1.0"
 
 [tool.poetry.group.dev.dependencies]
 black = "^22"
